# hastistics

./: Hastistics.cabal  Makefile  README.md
src/: Hastistics.hs
src/Hastistics/: Data.hs  Distributions.hs  Fields.hs  Report.hs  Types.hs
src/Hastistics/Data/: CSV.hs
tests/: Tests.hs  chrg.csv  noten.csv  profil.hs  report.hs  students.csv  test.csv
