Name:           Hastistics
Version:        0.0.1
Cabal-Version:  >= 1.2
License:        LGPL-3
License-File:   LICENSE
Author:         Florian Luescher, Patrick Walther, Matthias Brun
Description:    A statistics package for Haskell

Library
    Build-Depends:      base,HUnit
    HS-Source-Dirs:     src
    Exposed-Modules:    Hastistics
    Ghc-options:        -Wall

Test-suite tests
    Type:               exitcode-stdio-1.0
    Hs-source-dirs:     tests
    Main-is:            tests.hs
    Build-depends:      base
