Name:           Hastistics
Version:        0.0.1
Cabal-Version:  >= 1.9
License:        LGPL-3
License-File:   LICENSE
Author:         Florian Luescher, Patrick Walther, Matthias Brun
Description:    A statistics package for Haskell
Build-type:     Simple

Library
    Build-Depends:      base
    HS-Source-Dirs:     src
    Exposed-Modules:    Hastistics, Hastistics.Distributions
    Ghc-Options:        -Wall

Test-suite test
    Type:               exitcode-stdio-1.0
    Main-is:            tests/Tests.hs
    Build-Depends:      base, HUnit, Hastistics
